--- a/view_profile/style-view_profile.css
+++ b/view_profile/style-view_profile.css
@@ -1,13 +1,7 @@
-body {
-    cursor: default; /* Set cursor to default for the entire body */
-    text-decoration: none;
-}
-
 p {
     color: black;
     margin-left: 250px;
-    margin-top: 75px;
-    text-decoration: none;
+    margin-top: 75px
 }
 
 .profile {
